# malwhere

./: Cargo.toml  Microsoft.PowerShell_profile.ps1  README.md  disable-defender.ps1
common/: Cargo.toml
common/src/: lib.rs  util.rs
common/src/crypt/aes/: keygen.rs  ks.rs  mod.rs  table.rs
common/src/environment_block/: fetcher.rs  mod.rs  module.rs  read_gs.rs  types.rs
common/src/hashing/: crc.rs  djb.rs  fnv.rs  loselose.rs  mod.rs  traits.rs
common/src/remote/: mod.rs  process.rs  thread.rs  types.rs
common/src/syscall/: hell.rs  mod.rs  resolver.rs
harness/: Cargo.toml
harness/src/: loader.rs  main.rs
hwbp-hooks/: Cargo.toml
source/: example.Cargo.toml
source/api-hooking/: Cargo.toml
source/api-hooking/src/: main.rs
source/custom-api-functions/: Cargo.toml
source/custom-api-functions/src/: main.rs
source/debug-detection/: Cargo.toml
source/debug-detection/src/: main.rs
source/fn-stomping/: Cargo.toml
source/fn-stomping/src/: main.rs
source/hardware-breakpoint-hooking/: Cargo.toml
source/hardware-breakpoint-hooking/src/: main.rs
source/hardware-breakpoint-hooking/src/hook/: context.rs  exception.rs  hook.rs  parameter.rs
source/hardware-breakpoint-hooks/src/hook/: mod.rs  registers.rs
source/hells-gate/: Cargo.toml
source/hells-gate/src/: main.rs
source/hells-gate/src/hellsgate/: gate.rs  hell.rs  mod.rs
source/hells-gate/src/util/: common.rs  mod.rs  peb.rs
source/stager-registry/: Cargo.toml
source/stager-registry/src/: main.rs
syscall/: Cargo.toml
syscall/src/: hell.rs  initialization.rs  lib.rs  ntdll.rs  resolver.rs
