[workspace]
resolver = "2"
members = [
    "harness",
    "common",
]

[profile.release]
opt-level = "z"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
opt-level = "z"
lto = true
codegen-units = 1
