[package]
name = "common"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
lazy_static = "1.5.0"
rand = "0.9.0"

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Wdk_System_SystemInformation",
]

