[package]
name = "common"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.96", default-features = false }
lazy_static = "1.5.0"
rand = {  version = "0.9.0", default-features = false, features = ["small_rng", "os_rng"] }
libc-print = "0.1.23"
# libc = {  version = "0.2.171", default-features = false }

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Kernel",
    "Wdk_System_SystemInformation",
]

[profile.release]
panic = "abort"
strip = true
debug = false
opt-level = "z"
lto = true
codegen-units = 1
