[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
common = { path = "../common" }
syscall = { path = "../syscall" }
hwbp-hooks = { path = "../hwbp-hooks" }

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
]

