[package]
name = "harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {  version = "1.0.96", default-features = false }
common = { path = "../common" }
libc-print = "0.1.23"

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
]

[profile.release]
opt-level = "z"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
