[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
lazy_static = "1.5.0"
common = { path = "../common" }

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
]