[package]
name = "local-function-stomping"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",    
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
]
