[package]
name = "hardware-breakpoint-hook"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"

[dependencies.windows]
version = "0.59"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
]
