[package]
name = "hells-get"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",    
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
]

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
codegen-units = 1
split-debuginfo = "packed"